# techui-builder

./: .copier-answers.yml  .gitignore  .gitmodules  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  blgui.py  catalog-info.yaml  commit_message.txt  create_gui.yaml  guibuilder.py  motor.bob  pyproject.toml
.devcontainer/: devcontainer.json  install_lazygit.sh  post-install.sh
.github/: CONTRIBUTING.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/install_requirements/: action.yml
.github/workflows/: _container.yml  _dist.yml  _docs.yml  _example.yml  _release.yml  _test.yml  _tox.yml  ci.yml
docs/: conf.py
example/: create_gui.yaml
example-synoptic/: create_gui.yaml  generate_synoptic.py  test_bobscreens.py  test_gui_map.py  test_synoptic.py
example-synoptic/b23-services/config/: devsta.db
example-synoptic/b23-services/services/bl23b-di-mod-01/config/: ioc.yaml
example-synoptic/b23-services/synoptic/: IMG1.bob  IMG11.bob  IMG12.bob  IONP1.bob  IONP11.bob  IONP12.bob  IONP21.bob  JsonMap.json  M3.bob  MOD1.bob  MOD2.bob  PIRG1.bob  PIRG11.bob  PIRG12.bob  SPACE11.bob  create_gui.yaml  index-src.bob  index.bob  techui.schema.yaml  techui.yaml
example-synoptic/b23-services/synoptic/opis-src/: index-src.bob
example-synoptic/b23-services/synoptic/techui-support/bob/ADAravis/: ADAravis_summary.bob
example-synoptic/b23-services/synoptic/techui-support/bob/pmac/: motor_embed.bob  motor_embed.bob.jinja
example-synoptic/b23-services/synoptic/techui_support/: techui-support.yaml  techui_support.yaml
example-synoptic/b23-services/synoptic/techui_support/bob/: settings.ini
example-synoptic/b23-services/synoptic/techui_support/bob/ADAravis/: ADAravis_summary.bob
example-synoptic/b23-services/synoptic/techui_support/bob/pmac/: motor_embed.bob
example-synoptic/bl23b-services/services/bl23b-di-ioc-01/config/: ioc.yaml
example-synoptic/bl23b-services/services/bl23b-di-ioc-02/config/: ioc.yaml
example-synoptic/bl23b-services/services/bl23b-di-uvcam-01/config/: ioc.yaml
example-synoptic/bl23b-services/services/bl23b-di-uvcam-02/config/: ioc.yaml
example-synoptic/bl23b-services/services/bl23b-va-ioc-01/config/: ioc.yaml
example-synoptic/bob-src/: bl23b-synoptic-src.bob
example-synoptic/data/: BL23B-synoptic-src.bob  BL23BSynoptic.bob  bl23b-synoptic-src.bob
example/bl01t-services/services/bl01t-mo-ioc-01/config/: ioc.yaml
example/bl01t-services/synoptic/: techui.yaml
example/bl23b-services/services/bl23b-va-ioc-01/config/: ioc.yaml
example/data/: BL23BSynoptic.bob
example/t01-services/services/bl01t-ea-ioc-01/config/: fastcs.yaml
example/t01-services/synoptic/: index.bob  techui-support  techui.yaml
src/phoebus_guibuilder/: __init__.py  __main__.py  datatypes.py  git_utilities.py  guibuilder.py  screen.py  test_bobscreens.py
src/techui_builder/: __init__.py  __main__.py  _logger.py  autofill.py  builder.py  datatypes.py  generate.py  generate_jsonmap.py  loader.py  main_app.py  models.py  objects.py  render.py  schema_generator.py  screen.py  status.py  utils.py  validator.py  version.py
tests/: conftest.py  t01-services  test_autofiller.py  test_builder.py  test_cli.py  test_generate.py  test_generate_jsonmap.py  test_guibuilder.py  test_models.py  test_objects.py  test_screen.py  test_status.py  test_utils.py  test_validator.py
tests/test_files/: group.xml  motor-edited.bob  motor.bob  motor_bad.bob  motor_embed.bob  screen.bob  test_bob_embedded.bob  test_bob_navtabs.bob  widget.xml  widget_bad.xml  widget_bad_2.xml  widget_custom_suffix.xml  widget_list.yaml  widget_related.xml  widget_related_no_suffix.xml  widget_url_screen.xml
typings/phoebusgen/: __init__.pyi  _shared_property_helpers.pyi  _version.pyi
typings/phoebusgen/screen/: __init__.pyi  screen.pyi
typings/phoebusgen/widget/: __init__.pyi  properties.pyi  widget.pyi  widgets.pyi
